src/app/components/portfolio/portfolio.component.scss
$bg-color: rgb(52, 54, 56);

.telawrence {background: $bg-color url('../../../assets/images/t.e.lawrence-768x432.jpg');}
.wickedawesomepizza {background: $bg-color url('../../../assets/images/wickedawesomepizza-768x432.png');}
.exoticimports {background: $bg-color url('../../../assets/images/exoticimports-768x432.png');}
.portfoliowebsite {background: $bg-color url('../../../assets/images/portfoliowebsite-768x432.png');}
.pyramidsofgiza {background: $bg-color url('../../../assets/images/the-great-pyramids-of-giza.png');}
.campaigndashboard {background: $bg-color url('../../../assets/images/campaigndashboard-768x432.png');}

.parallax-wrapper {
    width: 100%;
    cursor: pointer;
    margin-bottom: 2em;
}
.parallax-content {
    transform-style: preserve-3d;
    perspective: 1000px;
}
.front, .back {
    border: 1px solid rgb(67, 69, 71);
    border-radius: 5px;
    min-height: 400px;
    height: 100% !important;
    color: white;
    text-align: center;
    background-size: cover;
    transition: transform 1s cubic-bezier(0.4, 0.2, 0.2, 1);
    backface-visibility: hidden;
}
.back {
    background: rgb(67, 69, 71);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;

    .inner p {
        font-size: 1.8em;
        margin: 0;
    }
}
.inner {
    transform: translateY(-50%) translateZ(190px) scale(0.9);
    top: 50%;
    position: absolute;
    left: 0;
    width: 100%;
    box-sizing: border-box;
    perspective: inherit;
    z-index: 2;
}

.parallax-content .back {
    transform: rotateY(180deg);
    transform-style: preserve-3d;
}

.parallax-content:hover .back {
    transform: rotateY(0deg);
    transform-style: preserve-3d;
}

.parallax-content .front {
    transform: rotateY(0deg);
    transform-style: preserve-3d;
}

.parallax-content:hover .front {
    transform: rotateY(-180deg);
    transform-style: preserve-3d;
}

